# kkonnect

./: .gitmodules  CMakeLists.txt  CONTRIB  DEPS  README.md  libusb_config.py
examples/: CMakeLists.txt
include/: kk_connection.h  kk_device.h  kk_errors.h
src/: CMakeLists.txt  kk_connection.cc  kk_device_freenect.cc  kk_device_freenect2.cc  kk_freenect1_device.cc  kk_freenect1_device.h  kk_freenect2_device.cc  kk_freenect2_device.h  kk_freenect_base.cc  kk_freenect_base.h  kk_freenect_connection.cc  kk_freenect_connection.h  utils.cc  utils.h
